Removed unused new auth objects

--- a/identity/app/views/reset_password.scala.html
+++ b/identity/app/views/reset_password.scala.html
@@ -1,16 +1,25 @@
-@(page: MetaData, form: Form[(String)])(implicit request: RequestHeader)
+@(page: MetaData, resetPasswordForm: Form[(String, String, String)])(implicit request: RequestHeader )
 
+@import views.html.fragments.form.idInputPassword
 
-@main(page, Switches.all) {
-
+@main(page, Switches.all){
 }{
-<div class="monocolumn-wrapper">
-    <h2 class="page-head page-head--article">Reset Password</h2>
+<form class="form" novalidate action="/reset-password"  method="post">
 
-    @helper.form(action = routes.ResetPasswordController.renderPasswordResetRequestForm) {
-    @helper.inputText(form("email"), '_error -> form.error("email"))
-    <input type="submit" name="reset-password" value="Send" />
+    <p> Please supply your new password </p>
+
+    @if(resetPasswordForm.globalError.isDefined) {
+        <div class="form-field__error text-input__note">@resetPasswordForm.globalErrors.map(_.message).mkString(", ")</div>
     }
-</div>
-}
+    <ul class="form-fields">
+        @idInputPassword(resetPasswordForm("password"), '_label -> "Password")
+        @idInputPassword(resetPasswordForm("password_confirm"), '_label -> "Confirm Password")
+        <input type="hidden" value="@resetPasswordForm("password_confirm")" name="token"/>
+        <li>
+            <button type="submit" class="submit-input">Submit</button>
+        </li>
+    </ul>
 
+
+</form>
+}
