--- a/identity/app/views/send_password_reset_email_error.scala.html
+++ b/identity/app/views/send_password_reset_email_error.scala.html
@@ -2,5 +2,5 @@
 
 @main(page, Switches.all){
 }{
-<p>There was an error tryinmg to send you an email Please <a href='/identity/recover'>Try later</a>"</p>
+<p>There was an error trying to send you an email Please <a href='/identity/recover'>Try later</a>"</p>
 }
