only switch to 16 grid max-width at wide

--- a/common/app/assets/stylesheets/layout/_grid-system.scss
+++ b/common/app/assets/stylesheets/layout/_grid-system.scss
@@ -11,7 +11,10 @@ $gs-max-columns: 16;
 @mixin gs-container {
     position: relative;
     margin: 0 auto;
-    max-width: gs-span($gs-max-columns) + $gutter*2;
+    max-width: gs-span(14) + $gutter*2;
+    @include mq(wide) {
+        max-width: gs-span(16) + $gutter*2;
+    }
 }
 
 // Output grid system
