Added a space for @kaelig

--- a/common/app/views/fragments/metaData.scala.html
+++ b/common/app/views/fragments/metaData.scala.html
@@ -25,7 +25,8 @@
     <meta name="HandheldFriendly" content="True" />
 
     @item.openGraph.map{ case (key, value) =>
-    <meta property="@key" content="@value"/> }
+    <meta property="@key" content="@value" />
+    }
 
 @*
     this script allows you to hook up an external debugger for mobile devices
