--- a/facia/app/views/fragments/frontBody.scala.html
+++ b/facia/app/views/fragments/frontBody.scala.html
@@ -2,7 +2,9 @@
 
 <div class="front-container cf" data-link-name="Front" role="main">
     @trailblocks.map{ block =>
-        @fragments.frontBlock(block, front)
+        @if(block.trails.nonEmpty) {
+            @fragments.frontBlock(block, front)
+        }
     }
 </div>
 
