--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -2,8 +2,9 @@
 
 @if(block.trails.nonEmpty){
 
-    <section class="front-section zone-@block.description.section @block.description.style.map(_.className)"
-             data-link-name="block | @block.description.name">
+    <section class="front-section zone-@block.description.section @block.description.style.map(_.className) @if(block.description.showMore){ js-show-more}"
+             data-link-name="block | @block.description.name"
+             data-section-id="@block.description.id">
 
         @if(block.description.id != "") {
             @if(index == 0 && !page.isNetworkFront) {
