Fall back to regular trail style when body not available for long trail form.

--- a/common/app/views/fragments/trails/thumbnail.scala.html
+++ b/common/app/views/fragments/trails/thumbnail.scala.html
@@ -30,7 +30,7 @@
             </a>
         </h@headingLevel>
 
-        @if(InlineArticlesSwitch.isSwitchedOn) {
+        @if(InlineArticlesSwitch.isSwitchedOn && !trail.leadingParagraphs.isEmpty) {
             @trail.leadingParagraphs.take(4).map { paragraph => <p>@Html(paragraph.html())</p> }
         } else {
             @trail.trailText.map { text => <div class="trail__text">@cleanTrailText(text)(Edition(request))</div> }
