--- a/common/app/assets/stylesheets/module/_article.scss
+++ b/common/app/assets/stylesheets/module/_article.scss
@@ -223,8 +223,7 @@ video {
 
 @include mq(leftCol) {
     .article-wrapper {
-        padding-left: 0;
-        padding-right: 0;
+        padding: 0 $gutter;
 
         > .article-zone {
             margin-left: $a-leftCol-width + $gs-gutter;
