--- a/common/app/views/fragments/trailblocks/masthead.scala.html
+++ b/common/app/views/fragments/trailblocks/masthead.scala.html
@@ -13,6 +13,10 @@
                 }
                 <h2 class="trail__title">@RemoveOuterParaHtml(trail.headline)</h2>
             </a>
+            <time class="js-timestamp trail__timestamp"
+                  itemprop="datePublished"
+                  datetime="@trail.webPublicationDate.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")"
+                  data-timestamp="@trail.webPublicationDate.getMillis">@Format(trail.webPublicationDate, "d MMM y")</time>
             @trail.trailText.map { text =>
                 <p class="trail__standfirst">@cleanTrailText(text)(Edition(request))</p>
             }
