--- a/football/app/views/fragments/footballMatchBody.scala.html
+++ b/football/app/views/fragments/footballMatchBody.scala.html
@@ -26,7 +26,7 @@
                 <h3 class="type-2 section-divider">Stats</h3>
             }
         </div>
-        <div class="article__inner">
+        <div class="article__main-column">
             @if(page.theMatch.isLive) {
                 <div class="update update-live-matches update-match-stats" data-link-name="autoupdate"></div>
             }
