--- a/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
@@ -59,12 +59,13 @@
 }
 // TODO: Make reusable if experiment is successful
 .trail__expander-cta__button {
-    background: $mushroom;
+    display: inline-block;
     padding: $baseline*2 $gutter;
+    border-radius: 0 0 3px 3px;
+    background: $mushroom;
     color: #444;
     text-align: center;
     font-family: $sans-serif;
-    border-radius: 0 0 3px 3px;
     font-size: 12px;
     font-size: 1.2rem;
 }
