--- a/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
@@ -7,6 +7,7 @@
     opacity: 0;
     height: 0;
     overflow: hidden;
+    margin-bottom: 0;
 }
 .trail__expander-trigger:checked {
     + .trail__expander-wrapper {
