--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -4,7 +4,10 @@
 
     <section class="front-section zone-@block.description.section @block.description.style.map(_.className) @if(block.description.showMore){ js-show-more}"
              data-link-name="block | @block.description.name"
-             data-section-id="@block.description.id">
+             data-section-id="@block.description.id"
+             @defining(Edition(request).id.toLowerCase()) { edition =>
+                 data-link-context="@if(block.description.section == "news"){@edition}else{@edition/@block.description.section}">
+             }
 
         @if(block.description.id != "") {
             @if(index == 0 && !page.isNetworkFront) {
@@ -14,13 +17,16 @@
             }
         }
 
-        @block.description.style match {
-            case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
-            case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
-            case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
-            case Some(Masthead)     => { @trailblocks.masthead(block.trails.take(4)) }
-            case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
-        }
+        <div class="front-trailblock-@SafeName(block.description)">
+            @block.description.style match {
+                case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
+                case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
+                case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
+                case Some(Masthead)     => { @trailblocks.masthead(block.trails.take(4)) }
+                case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
+            }
+        </div>
+
     </section>
 
 }
