Tweaked swipe bar interaction behaviour

--- a/common/app/assets/stylesheets/module/experiments/_bar.scss
+++ b/common/app/assets/stylesheets/module/experiments/_bar.scss
@@ -5,12 +5,17 @@
     height: 36px;
     width: 100%;
     z-index: 9999;
-    opacity: 0.90;
     background-color: #F9F9F7;
     text-align: center;
 
+    //For fading
+    opacity: 0.9;
+
     &.is-hidden {
-        display: none;
+        opacity: 0;
+        transition: opacity 0.5s;
+        -moz-transition: opacity 0.5s;
+        -webkit-transition: opacity 0.5s;
     }
 }
 
