Deport expandable trail html into their own fragments

--- a/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-expandable-trails.scss
@@ -31,7 +31,7 @@
     }
 }
 .trail__expander-cta {
-    padding-top: $baseline;
+    padding-top: $baseline*2;
     margin-bottom: $baseline*3;
     text-align: center;
     cursor: pointer;
