--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -2,7 +2,7 @@
 
 @if(block.trails.nonEmpty){
 
-    <section class="front-section zone-@block.description.section @if(block.description.showMore){ js-show-more}"
+    <section class="front-section zone-@block.description.section"
              data-link-name="block | @block.description.name"
              data-section-id="@block.description.id"
              @defining(Edition(request).id.toLowerCase()) { edition =>
@@ -17,7 +17,7 @@
             }
         }
 
-        <div class="front-trailblock-@SafeName(block.description) trailblock trailblock--@block.description.style.map(_.className)">
+        <div class="front-trailblock-@SafeName(block.description) trailblock trailblock--@block.description.style.map(_.className) @if(block.description.showMore){ js-show-more}">
             @block.description.style match {
                 case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
                 case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
